# csc468-scalability

./: .env  .gitignore  README.md  commands.py  docker-compose.yml  run
containers/: Dockerfile  build  run
database/: Dockerfile  init.sql
http-workload-generator/: build.gradle  run
http-workload-generator/workload-generator/: build.gradle
logging-db/: init.sql
logging-server/: Dockerfile  database.ini
logging-server/src/: consumer.py  server.py
logging-server/src/lib/: logging_DB.py  xml_writer.py
nginx/: Dockerfile  nginx.conf
quote-cache/: Dockerfile
quote-cache/src/: CMakeLists.txt  main.cpp
scripts/: create-log-file  missing-transactions  restart  run  setup  start  stop
transaction-server/: Dockerfile  commands.py  transaction-server.py  workload-generator.py  xml_writer.py
transaction-server/src/: server.py  wsgi.py
transaction-server/src/lib/: commands.py  publisher.py  xml_writer.py
transaction-server/workloads/: workload-test
webserver/: Dockerfile  build  docker-compose.yml  nginx.conf  readme.md  run  server.py
webserver/html/: index.html  login.html
webserver/html/css/: sb-admin-2.css  sb-admin-2.min.css
webserver/src/: server.py
worker/src/worker/: commands.go  worker.go  xml_writer.go
workload-generator/: Dockerfile  build.gradle  docker-compose.yml  entry  readme.md  run  workload.py
workload-generator/src/: settings.gradle  workload-generator.py
workload-generator/workload-generator/: build.gradle
workloads/: all-paths  quote  workload
(+4 files in other folders)
